# ThinkTerm

./: .gitignore  Cargo.toml  README.md
src/: ai.rs  commands.rs  main.rs  theme.rs
